--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <ul id="ilist"></ul>
         </div>
     </div>
+    <!-- IA -->
+    <a href="historico.html" id="history-btn">
+        <i class="material-icons">history</i>
+      </a>      
 </body>
 <script src="script.js"></script>
 </html>
